# ros2bfu

./: .gitignore  .gitmodules  README.md
cubemx/: .mxproject  CMakeLists.txt  Makefile  cubemx.ioc  stm32f411ceux_flash.ld
cubemx/Core/Inc/: stm32f4xx_it.h
cubemx/Core/Src/: freertos.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
cubemx/bfu/: bfumain.cpp
cubemx/cmake/stm32cubemx/: CMakeLists.txt
cubemx/libmicroros/microros_include/control_msgs/msg/detail/: dynamic_interface_group_values__struct.h
firmware/: CMakeLists.txt  cubemx.ioc
firmware/bfu/: bfumain.cpp
firmware/stmf103/: .mxproject  CMakeLists.txt  ros2bfu.ioc  stm32f103rctx_flash.ld
firmware/stmf103/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
firmware/stmf103/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c
firmware/stmf103/cmake/: gcc-arm-none-eabi.cmake
firmware/stmf103/cmake/stm32cubemx/: CMakeLists.txt
firmware/stmf103/libmicroros/: available_ros2_types
firmware/stmf103/libmicroros/microros_include/control_msgs/msg/detail/: joint_trajectory_controller_state__struct.h  speed_scaling_factor__struct.h
firmware/stmf411/: CMakeLists.txt  cubemx.ioc
firmware/stmf411/Core/Src/: freertos.c
firmware/stmf411/cmake/: gcc-arm-none-eabi.cmake
firmware/stmf411/libmicroros/: built_packages
firmware/stmf411/libmicroros/microros_include/control_msgs/msg/detail/: dynamic_interface_group_values__functions.h  speed_scaling_factor__functions.h
